# dualboot-django-task-manager

./: Dockerfile  Makefile  README  docker-compose.yml  pyproject.toml
main/: admin.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_alter_task_deadline.py  0002_tag_task_tag_tasks.py  0003_alter_task_deadline.py  0003_remove_tag_tasks.py  0004_alter_task_created_at_alter_task_edited_at.py  0004_alter_task_deadline.py  0005_alter_task_deadline.py  0006_user_date_of_birth_user_phone_alter_task_created_at_and_more.py
main/models/: tag.py  task.py
task_manager/: settings.py  urls.py
tests/: base.py  factories.py  faker.py  test_admin.py  test_tag.py  test_task.py  test_token.py  test_user.py
