[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
psycopg2-binary = "^2.9.4"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
Markdown = "^3.4.1"
drf-yasg = "^1.21.4"
djangorestframework-simplejwt = "^5.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
